# captains-log

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  sample-import.org  test-dayone-import.json
docs/: database.md
src/: main.rs
src/audio/: mod.rs  platform.rs  playback.rs  recording.rs  storage.rs  transcription.rs
src/cli/: dateparser.rs  formatting.rs  frontmatter.rs  mod.rs  stardate.rs
src/config/: mod.rs
src/database/: mod.rs
src/export/: mod.rs
src/import/: mod.rs
src/journal/: mod.rs
src/server/: mod.rs
