[package]
name = "captains-log"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
anyhow = "1.0"
colored = "3.0"
pulldown-cmark = "0.13.0"
regex = "1.11"
terminal_size = "0.4.3"
textwrap = { version = "0.16", features = ["unicode-width"] }

[[bin]]
name = "cl"
path = "src/main.rs"
