[package]
name = "captains-log"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.39", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
directories = "6.0"
anyhow = "1.0"
colored = "3.0"
pulldown-cmark = "0.13.0"
regex = "1.11"
terminal_size = "0.4.3"
textwrap = { version = "0.16", features = ["unicode-width"] }
rand = "0.10"
which = "8.0"
signal-hook = "0.4"
libc = "0.2"
axum = "0.8"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "cl"
path = "src/main.rs"
